[tool.poetry]
name = "python-causality-handbook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.2"
pandas = "^1.2.4"
scipy = "^1.6.3"
seaborn = "^0.11.1"
matplotlib = "^3.4.1"
statsmodels = "^0.12.2"
linearmodels = "^4.24"
graphviz = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.5.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
